# socket-man

./: .gitmodules  2023-12dec-23sat.txt  TODOs.org  cpanfile  pokemon-srv.pl  tcpdump.sh
+fail+/io-async/: .gitignore  cpanfile  pokemon-srv.pl
cpp-asio-coro/: CMakeLists.txt
cpp-asio-coro/include/: pch.hpp  pokemon.hpp  progopts.hpp  tcp_serv.hpp  utils.hpp
cpp-asio-coro/src/: pokemon_names.cpp  tcp_serv_handler.cpp  tcp_serv_listener.cpp  tcp_serv_main.cpp  tcp_serv_progopts.cpp  utils.cpp
cpp-asio-spawn/: Makefile  gen-compile-commands-json.sh  pch.hpp  pokemon.hpp  server.hpp  tcp_serv.cpp
cpp-thread/: .gitignore  Makefile  pch.hpp  pokemon.hpp  server.hpp  tcp_serv.cpp
ruby-async-pokemon/: Gemfile  fiber-sched.rb  tcp-srv.rb
